hphp/hack/test/typecheck/const_attribute/redeclare_from_const_in_trait.php.legacy_decl.exp
File "redeclare_from_const_in_trait.php", line 4, characters 33-35:
This property is __Const (Typing[4204])
File "redeclare_from_const_in_trait.php", line 5, characters 18-20:
This property is not __Const
